--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="jf95AhMY2T2w5aR4Uhd3Y0CPLAxFUlGKnDyO-g0-6eg" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
