--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <script>
+  <!--<script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
         console.log('Service Worker registered');
@@ -20,6 +20,6 @@
         console.log('Service Worker registration failed: ', err);
       });
     }
-  </script>
+  </script>-->
 </body>
 </html>
