--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta name="google-site-verification" content="i9gLbrPgrFXBwN7_PslS1gJrlOAZPJvfdOBg9ldPOys" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
