--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <wrc-root></wrc-root>
   <!--<script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
